@@ -31,6 +31,8 @@ Changes from versions 3.1.* to version 3.2.0:
   mpfr_flags_save and mpfr_flags_restore to operate on groups of flags.
 - New functions mpfr_set_float128 and mpfr_get_float128 to convert from/to
   the __float128 type (requires --enable-float128 and compiler support).
+- New function mpfr_round_nearest_away rounding to nearest-away (as defined
+  in IEEE 754-2008).
 - Added configure option --enable-assert=none to avoid checking any assertion.
 - Updated tuning parameters.
 - Improved MPFR manual.
